Sign Up Successfully!

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,10 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
- <div class="field">
-  <%= f.label :name %><br />
-  <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-</div>
+   <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autocomplete: "name", autofocus: true, required: true %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
