--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,30 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+.heading {
+  font-family: 'Righteous', sans-serif;
+  margin: 2rem;
+  padding: 1rem;
+  font-size: 6.6vw;
+}
+.btn {
+ font-weight: 500;
+ font-size: x-large;
+}
+.btn-p {
+  padding: 0.6rem 3.6rem;
+}
+
+.btn-p:hover {
+  background-color: #cbd5e1;
+}
+@media (max-width: 500px) {
+.btn {
+  flex-direction: column;
+}
+.btn-p {
+  width: 100vw;
+  font-size: 5vw;
+}
+}
