--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,47 @@
 <body class="bg-grey_home">
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autocomplete: "name", autofocus: true, required: true %>
+    <nav class="bg-blue p-4 flex justify-between items-center max-w-8xl mx-auto">
+      <div class="mr-4 text-white text-2xl font-bold flex items-center">
+       <a href="/" class="mr-4 text-white text-2xl font-bold flex items-center">
+    <span class="arrow-left text-white text-5xl font-bold">&#8592;</span>
+  </a>
+        </div>
+        <div class="mr-4 text-white text-2xl font-bold flex items-center">
+        <span class="ml-2">Registration</span>
+      </div>
+    <div class="flex items-center">
+      <ul class="flex space-x-4">
+        <%= form_tag(destroy_user_session_path, method: :delete) do %>
+          <li class="mr-3">
+            <%= submit_tag 'Log Out', class: "text-white block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50 cursor-pointer" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
+</nav>
+  <div style="margin: 2rem;">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="field">
+        <%= f.text_field :name, placeholder: "Enter your name", autocomplete: "name", autofocus: true, required: true, class: "f-w w-full rounded-lg px-3 py-2 border" %>
+      </div>
+
+      <div class="field">
+        <%= f.email_field :email, placeholder: "Enter your email", autofocus: true, autocomplete: "email", class: "f-w w-full rounded-lg px-3 py-2 border" %>
+      </div>
+
+      <div class="field">
+        <%= f.password_field :password, placeholder: "Enter your password (Minimum 6 characters)", autocomplete: "new-password", class: "f-w w-full rounded-lg px-3 py-2 border" %>
+      </div>
+
+      <div class="field">
+        <%= f.password_field :password_confirmation, placeholder: "Confirm your password", autocomplete: "new-password", class: "f-w w-full rounded-lg px-3 py-2 border" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Sign up", class: "w-full bg-blue-500 text-white font-semibold rounded-lg px-4 py-2" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
 </body>
