Add Transaction Mechanism

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,27 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-   
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
   <body class="bg-grey_home">
+    <% flash.each do |key, value| %>
+      <div id="flash-success" class="flash flash-success flex items-center text-white justify-center bg-green">
+        <%= value %>
+      </div>
+    <% end %>
 
-<main>
+    <main>
       <%= yield %>
+      <script>
+        document.addEventListener('turbo:load', function() {
+          setTimeout(function() {
+            document.querySelectorAll('.flash').forEach(function(flashElement) {
+              flashElement.style.display = 'none';
+            });
+          }, 3000);
+        });
+      </script>
     </main>
   </body>
 </html>
