--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -25,24 +25,34 @@
   </div>
 </nav>
     <main>
+        <% if flash[:success] %>
+    <div id="flash-success" class="flash flash-success flex items-center text-white justify-center bg-green">
+      <%= flash[:success] %>
+    </div>
+  <% end %>
         <div class="p-4">
             <ul class="flex flex-col list-none">
                 <% @categories.each do |category| %>
+                <a href="<%= category_transactions_path(category) %>">
                     <li class="bg-white rounded-lg shadow-md p-4 text-center flex items-center" style="margin: 1rem">
                         <div class="flex w-full items-center justify-between">
-                            <a href="<%= category_path(category) %>" class="flex items-center">
+                            <div class="flex items-center">
                                 <div class="flex items-center">
                                     <% if category.icon.attached? %>
                                         <%= image_tag category.icon, class: 'w-[50%] h-16 md:h-24 lg:h-32 xl:h-40' %>
                                     <% end %>
+                                    <div class="flex flex-col items-left">
                                     <h2 class="text-lg font-bold text-center ml-4"><%= category.title %></h2>
+                                   <%= category.created_at.strftime("%B %d, %Y") %>
+                                   </div>
                                 </div>
-                            </a>
+                            </div>
                             <div class="flex-end">
-                                <p>$</p>
+                                <h4>$<%= category.total_sum %></h4>
                             </div>
                         </div>
                     </li>
+                    </a>
                 <% end %>                                 
             </ul>
         </div>
