--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -24,6 +24,7 @@
     </div>
   </div>
 </nav>
+<body>
     <main>
         <% if flash[:success] %>
     <div id="flash-success" class="flash flash-success flex items-center text-white justify-center bg-green">
