--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -37,7 +37,7 @@
       </div>
 
       <div class="actions">
-      <%= f.submit "Save", class: "w-full bg-blue text-white", style: "padding: 0.60rem" %>
+      <%= f.submit "Save",  class: 'block w-full bg-blue-500 text-center text-white font-semibold py-2 px-4 rounded-lg', style: "padding: 0.60rem" %>
       </div>
     <% end %>
   </div>
