--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,7 +40,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: "w-full bg-blue-500 text-white font-semibold rounded-lg px-4 py-2" %>
+        <%= f.submit "Sign up",  class: 'block w-full bg-blue-500 text-center text-white font-semibold py-2 px-4 rounded-lg', style: "padding: 0.60rem"  %>
       </div>
     <% end %>
   </div>
