--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+      <script src="https://cdn.tailwindcss.com"></script>
     <%= javascript_importmap_tags %>
-    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-grey_home">
     <% flash.each do |key, value| %>
